...
   },
   {
    "id": "8ba24324-2ee2-4408-9a0c-e7961e8b3a84",
    "nameSingular": "company",
    "namePlural": "companies",
    "labelSingular": "Company",
    "labelPlural": "Companies",
    "icon": null,
    "isActive": true,
    "isSystem": false,
    "isCustom": false,
    "labelIdentifierFieldMetadataId": "21a22b06-844b-49b0-9334-1f04a80f6e60",
    "imageIdentifierFieldMetadataId": null,
...
      "isSystem": false,
      "isCustom": true,
      "options": [
       {
        "id": "cdb380fa-25bf-4ea9-870f-f58733a7668c",
        "value": "INSTITUTIONAL",
        "label": "Institutional",
        "color": "violet",
        "position": 0
       },
       {
        "id": "7801f608-9a68-407f-bc5f-fbfa002e012b",
        "value": "DEFI",
...
        "color": "grass",
        "position": 19
       },
       {
        "id": "37dea2e6-2f35-4038-b873-a7d2a40df1ac",
        "value": "ASSET_MANGER",
        "label": "Asset Manger",
        "color": "green",
        "position": 20
       },
       {
        "id": "6fd93d0b-2a3c-4c93-a733-4d96b9063043",
        "value": "BANK",
...
